# advent-of-code-python-template

./: .aoc-cli.json  Makefile  README.md  main.py  pyproject.toml
src/: aoc_cli.py  runner.py  template.py
src/solutions/: template.txt
